[project]
name = "sectools"
version = "1.5.0"
description = "A python library containing the base functions for security tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Podalirius", email = "podalirius@protonmail.com" }
]
dependencies = [
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
